--- a/apitests.ipynb
+++ b/apitests.ipynb
@@ -40,6 +40,428 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from app.services.audio.redis import Diarisation,Transcript"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redis_client = await get_redis_client(settings.redis_host, settings.redis_port, settings.redis_password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#await redis_client.flushdb()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meeting_id = 'https://meet.google.com/tdi-fqhq-icr'\n",
+    "diarization = Diarisation(meeting_id,redis_client=redis_client)\n",
+    "transcript = Transcript(meeting_id,redis_client=redis_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#await diarization.delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#await transcript.delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diarizations = []\n",
+    "while True:\n",
+    "    d = await diarization.rpop()\n",
+    "    if not d:\n",
+    "        break\n",
+    "    diarizations.append(json.loads(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[{'start': 7.122241086587437,\n",
+       "    'end': 15.169779286926996,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.8141123}],\n",
+       "  '2024-05-22T20:21:25.064897+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 1.1120543293718166,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109},\n",
+       "   {'start': 1.2648556876061121,\n",
+       "    'end': 8.616298811544992,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109},\n",
+       "   {'start': 8.803056027164686,\n",
+       "    'end': 14.151103565365027,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109},\n",
+       "   {'start': 14.660441426146011,\n",
+       "    'end': 15.203735144312395,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109},\n",
+       "   {'start': 16.29032258064516,\n",
+       "    'end': 21.99490662139219,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109},\n",
+       "   {'start': 22.011884550084893,\n",
+       "    'end': 23.132427843803057,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9200109}],\n",
+       "  '2024-05-22T20:21:32.187138+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 1.1120543293718166,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 1.2648556876061121,\n",
+       "    'end': 8.616298811544992,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 8.803056027164686,\n",
+       "    'end': 14.151103565365027,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 14.660441426146011,\n",
+       "    'end': 15.203735144312395,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 16.29032258064516,\n",
+       "    'end': 25.679117147707984,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 26.426146010186756,\n",
+       "    'end': 29.465195246179967,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 29.80475382003396,\n",
+       "    'end': 30.97623089983022,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 33.94736842105263,\n",
+       "    'end': 36.00169779286927,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 36.40916808149406,\n",
+       "    'end': 37.25806451612903,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585},\n",
+       "   {'start': 37.835314091680814,\n",
+       "    'end': 38.3446519524618,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9717585}],\n",
+       "  '2024-05-22T20:21:32.187138+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 1.8930390492359932,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.8863556},\n",
+       "   {'start': 2.436332767402377,\n",
+       "    'end': 13.37011884550085,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.8863556},\n",
+       "   {'start': 14.04923599320883,\n",
+       "    'end': 16.001697792869273,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.8863556}],\n",
+       "  '2024-05-22T20:22:10.022452+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 1.8930390492359932,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 2.436332767402377,\n",
+       "    'end': 13.353140916808151,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 14.03225806451613,\n",
+       "    'end': 17.750424448217316,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 18.3616298811545,\n",
+       "    'end': 20.551782682512737,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 21.723259762309,\n",
+       "    'end': 23.59083191850594,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 24.388794567062817,\n",
+       "    'end': 25.526315789473685,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 25.764006791171475,\n",
+       "    'end': 26.137521222410868,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.95705473},\n",
+       "   {'start': 30.97623089983022,\n",
+       "    'end': 30.993208828522924,\n",
+       "    'speaker': '6b4fe146-5cc1-4ef5-8bc2-82c474de5223',\n",
+       "    'score': 0.9879309}],\n",
+       "  '2024-05-22T20:22:10.022452+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 0.9932088285229204,\n",
+       "    'speaker': 'e7d0ccb1-d969-492c-b9fd-f73093eed4fb',\n",
+       "    'score': 0.6784061},\n",
+       "   {'start': 13.251273344651953,\n",
+       "    'end': 15.237691001697794,\n",
+       "    'speaker': 'e7d0ccb1-d969-492c-b9fd-f73093eed4fb',\n",
+       "    'score': 0.6784061}],\n",
+       "  '2024-05-22T20:22:40.998683+00:00'],\n",
+       " [[{'start': 0.008488964346349746,\n",
+       "    'end': 5.780984719864177,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9075428},\n",
+       "   {'start': 6.6298811544991505,\n",
+       "    'end': 6.986417657045841,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9075428},\n",
+       "   {'start': 7.614601018675723,\n",
+       "    'end': 10.110356536502547,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9075428},\n",
+       "   {'start': 11.010186757215621,\n",
+       "    'end': 13.590831918505943,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9075428},\n",
+       "   {'start': 14.066213921901529,\n",
+       "    'end': 17.122241086587437,\n",
+       "    'speaker': '6a3902ac-d4c3-4409-b3f9-d6a6d26439fd',\n",
+       "    'score': 0.9075428}],\n",
+       "  '2024-05-22T20:22:54.249956+00:00']]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diarizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_458/4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO @Andrew this is to apply to the list of transcriptions for concatination\n",
+    "def transcrtiption2df(transcription,seek):\n",
+    "    df =pd.DataFrame(transcription[0])\n",
+    "    df['seek'] = pd.to_datetime(seek)\n",
+    "    df['conv_start'] = pd.to_timedelta(df['start'],unit='s')+df['seek']\n",
+    "    df['conv_end'] = pd.to_timedelta(df['end'],unit='s')+df['seek']\n",
+    "    return df.reset_index(drop=True)\n",
+    "\n",
+    "def concatinate_segments(segments):\n",
+    "    dfs = [transcrtiption2df(result,seek) for result, seek in segments]\n",
+    "    df = pd.concat(dfs).sort_values(by=['conv_start', 'conv_end']).reset_index(drop=True)\n",
+    "\n",
+    "    # Initialize an empty list to store the final words\n",
+    "    final_words = []\n",
+    "\n",
+    "    # Iterate over the concatenated dataframe and select words with the highest probability\n",
+    "    for i in range(len(df)):\n",
+    "        if i == 0:\n",
+    "            final_words.append(df.loc[i])\n",
+    "        else:\n",
+    "            if df.loc[i]['conv_start'] >= final_words[-1]['conv_end']:\n",
+    "                final_words.append(df.loc[i])\n",
+    "            else:\n",
+    "                if df.loc[i]['probability'] > final_words[-1]['probability']:\n",
+    "                    final_words[-1] = df.loc[i]\n",
+    "\n",
+    "    # Convert the list of final words back to a dataframe\n",
+    "    return pd.DataFrame(final_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('diarizations.pkl', 'wb') as file:\n",
+    "    pickle.dump(diarizations, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('transcriptions.pkl', 'wb') as file:\n",
+    "    pickle.dump(transcriptions, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transcriptions = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\" to be able to we can with your code inside of GitHub, I with you the fail when it tries to edit the my now i have a demo to share we're gonna hope the demo goes smoothly task kind of my favorite uh you know hello world task right a bash script that prints You can see as it's going about its work, You can see as it's going about its work, pops up I want to add to this\",\n",
+       " ' can do this kind of wrote brand new where, I know, it achieves some task and you can say, okay, now I have some extra requirement that I want to add to this',\n",
+       " \" The most exciting thing, can I really to show you all is, with the what I'm going to do actually show you all what I've done here\",\n",
+       " \" an empty staging area, an empty workspace, I'll actually show you all what I've done here\",\n",
+       " ' Out of this to basically to, to do is tell OpenDevon to work inside of this codebase, basically Open Devon codebase',\n",
+       " ' again',\n",
+       " \" I should be able to see So you can see now we're inside of the Open Devon codebase\",\n",
+       " \" This is the file that I've edited the problem\",\n",
+       " \" that So by default, the agent doesn't know anything about this code base\",\n",
+       " ' The through it on the command line here SweetBench Lite score, the our core agent the kodak agent which is the a lot of really context window',\n",
+       " ' It looks like it is now trying to set up its environment to make sure that it can actually Correct',\n",
+       " \" So we're working on getting that goes, just might take a little while\",\n",
+       " ' a little more actually just you can see the middle, right? agent You can see right now the agent, вот, все шло была одна сила, которая не как по но только центральному-таки немецкая полиция тоже не дремала про подготовку вас',\n",
+       " ' это перебросить всего тысяч дополнительные в общем-то, силы',\n",
+       " ' приказывает перебросить в эти земли дополнительные серьезные силы',\n",
+       " ' 1 октября соответственно, местных партийных активистов',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    d = await transcript.rpop()\n",
+    "    if not d:\n",
+    "        break\n",
+    "    transcriptions.append(json.loads(d))\n",
+    "concatinate_segments(transcriptions)\n",
+    "''.join(concatinate_segments(transcriptions)['word'].tolist()).split('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "the JSON object must be str, bytes or bytearray, not NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[181], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m t \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m transcript\u001b[38;5;241m.\u001b[39mrpop();t\n\u001b[0;32m----> 2\u001b[0m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/json/__init__.py:339\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    337\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    338\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(s, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mbytearray\u001b[39m)):\n\u001b[0;32m--> 339\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthe JSON object must be str, bytes or bytearray, \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    340\u001b[0m                         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnot \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n",
+      "\u001b[0;31mTypeError\u001b[0m: the JSON object must be str, bytes or bytearray, not NoneType"
+     ]
+    }
+   ],
+   "source": [
+    "t = await transcript.rpop();t\n",
+    "json.loads(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -47,7 +469,7 @@
        "5.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
